--- a/src/index.css
+++ b/src/index.css
@@ -33,11 +33,9 @@ body:has(.card[data-color="green"]:hover) {
   .subhead-text {
     @apply font-semibold sm:text-3xl text-xl relative font-poppins;
   }
-
-  .blue-gradient_text {
-    @apply bg-gradient-to-r from-[#00c6ff] to-[#0072ff] bg-clip-text text-transparent;
+  .pink-to-red-gradient_text {
+    @apply bg-gradient-to-r from-[#FF6EC7] to-[#FF0000] bg-clip-text text-transparent;
   }
-
   .input {
     @apply bg-white border border-gray-200 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 mt-2.5 font-normal shadow-card;
   }
