fixing the css about the popups

--- a/src/index.css
+++ b/src/index.css
@@ -61,11 +61,15 @@ body:has(.card[data-color="green"]:hover) {
   }
 
   .info-box {
-    @apply mx-5 relative flex text-white flex-col gap-3 max-w-2xl neo-brutalism-blue pt-4 pb-12 px-8;
+    @apply  mx-5 relative flex text-white flex-col gap-3 max-w-80 neo-brutalism-blue pt-3 pb-9 px-4 ;
+    top: -20px;
+    margin: 0 auto;
+    transform: translateY(-50%);
   }
 
   .neo-btn {
-    @apply py-3 px-6 rounded-lg text-blue-500 text-center font-semibold sm:w-1/2 w-[90%] -bottom-5 absolute mx-auto right-0 left-0 flex justify-center items-center gap-3;
+    @apply py-3 px-3 rounded-lg text-blue-500 text-center font-semibold sm:w-1/2 -bottom-5 absolute mx-auto right-0 left-0 flex justify-center items-center gap-3;
+    font-size: 0.875rem;
   }
 
   .cta {
@@ -163,7 +167,6 @@ body:has(.card[data-color="green"]:hover) {
   transform: translateZ(80px) translateY(-5px) rotateX(15deg) rotateY(15deg);
 }
 
-/* Neo Brutalism */
 .neo-brutalism-blue {
   background: #2b77e7;
   position: relative;
