--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ body:has(.card[data-color="green"]:hover) {
   }
 
   .btn {
-    @apply text-white bg-gradient-to-r from-[#00c6ff] to-[#0072ff] focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center;
+    @apply text-white bg-gradient-to-r from-[#e77ab8] to-[#e22590] focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center;
   }
 
   .header {
@@ -68,7 +68,7 @@ body:has(.card[data-color="green"]:hover) {
   }
 
   .neo-btn {
-    @apply py-3 px-3 rounded-lg text-blue-500 text-center font-semibold sm:w-1/2 -bottom-5 absolute mx-auto right-0 left-0 flex justify-center items-center gap-3;
+    @apply py-3 px-3 rounded-lg text-pink-600 text-center font-semibold sm:w-1/2 -bottom-5 absolute mx-auto right-0 left-0 flex justify-center items-center gap-3;
     font-size: 0.875rem;
   }
 
@@ -168,17 +168,25 @@ body:has(.card[data-color="green"]:hover) {
 }
 
 .neo-brutalism-blue {
-  background: #2b77e7;
+  background: linear-gradient(to right, #f472b6, #9d174d);
   position: relative;
   border-radius: 10px;
-  border: #2b77e7;
-  box-shadow: 0.6vmin 0.6vmin #336cc1, 1vmin 1vmin #0092db, 1vmin 1vmin #0092db,
-    0.65vmin 1vmin #0092db, 1vmin 0.65vmin #0092db;
+  border: #dad0d4;
+  box-shadow: 
+    0.4vmin 0.4vmin 4px rgba(224, 111, 168, 0.7), 
+    0.8vmin 0.8vmin 8px rgba(211, 92, 148, 0.6), 
+    1.2vmin 1.2vmin 12px rgba(191, 69, 124, 0.5), 
+    1.5vmin 1.5vmin 16px rgba(167, 56, 102, 0.4), 
+    2vmin 2vmin 20px rgba(207, 99, 132, 0.3);
 }
 
 .neo-brutalism-white {
   background: #fff;
   border: #fff;
-  box-shadow: 0.6vmin 0.6vmin #fff, 1vmin 1vmin #d2e4ff, 1vmin 1vmin #d2e4ff,
-    0.65vmin 1vmin #d2e4ff, 1vmin 0.65vmin #d2e4ff;
+  box-shadow: 
+    0.4vmin 0.4vmin 4px rgba(255, 255, 255, 0.7), 
+    0.8vmin 0.8vmin 8px rgba(210, 228, 255, 0.6), 
+    1.2vmin 1.2vmin 12px rgba(210, 228, 255, 0.5), 
+    1.5vmin 1.5vmin 16px rgba(210, 228, 255, 0.4), 
+    2vmin 2vmin 20px rgba(210, 228, 255, 0.3);
 }
