--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,13 @@ body:has(.card[data-color="green"]:hover) {
   .max-container {
     @apply max-w-5xl mx-auto sm:p-16 pb-12 !pt-[126px] px-8 min-h-[calc(100vh-80px)];
   }
+  .max-container-project {
+    @apply max-w-screen-sm sm:p-16 pb-12 !pt-[126px] min-h-[calc(100vh-80px)];
+  }
 
+  .max-container-project2 {
+    @apply max-w-5xl  sm:p-16 pb-12 !pt-[126px] pr-96 min-h-[calc(100vh-80px)];
+  }
   .head-text {
     @apply sm:text-5xl text-3xl font-semibold sm:leading-snug font-poppins;
   }
